--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd backEnd && npm install && cd ../frontEnd && npm install && npm run build",
-    "start": "node backEnd/server.js",
+    "start": "cd backEnd && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
