--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -17,6 +17,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.9.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.5"
   },
